# f2r

./: .gdb_history  .gitignore  .gitmodules  README.md  conanfile.py  config.hpp.in  design_decisions.md  meson.build  meson_options.txt  pch.hpp  tags
include/: integers.hpp  renderable.hpp  renderer.hpp  window.hpp
include/files/: color.hpp  common.hpp  frame.hpp  frm.hpp  pal.hpp  point.hpp  sequential_reader.hpp
research/: ACM.TXT  offsets_en.txt
src/: main.cpp  meson.build  renderable.cpp  window.cpp
src/file_libs/: meson.build
src/file_libs/acm/: acm.cpp  acm.hpp  meson.build  wav.cpp  wav.hpp
src/file_libs/common/: common.cpp  common.hpp  meson.build  sequential_reader.hpp  str_array.hpp  vector2d.hpp
src/file_libs/common/tests/: meson.build
src/file_libs/frm/: frame.hpp  frm.cpp  frm.hpp  meson.build
src/file_libs/mve/: chunk.hpp  meson.build  mve.cpp  mve.hpp  opcode.cpp  opcode.hpp
src/file_libs/pal/: meson.build  pal.cpp  pal.hpp
src/files/: common.cpp  frm.cpp  pal.cpp
tests/: meson.build
tests/file_libs/common/: endian_test.cpp  meson.build  str_array_test.cpp  vector2d_test.cpp
tests/files/common/: endian_test.cpp  meson.build  str_array_test.cpp  vector2d_test.cpp
tools/: meson.build
tools/f2_media_convert/: f2_media_convert.cpp  meson.build
tools/frm_to_img/: frm_to_img.cpp  meson.build  stb_image_write.cpp
tools/read_frm/: meson.build  read_frm.cpp
tools/read_pal/: meson.build  read_pal.cpp
